log/build_2025-02-11_14-29-12/ar_loc_base/stderr.log
  File "/home/GTL/pcastere/ros_hw1/ros2_hw1/install/ar_loc_base/lib/python3.10/site-packages/ar_loc_base/rover_pf.py", line 109
    else
        ^
SyntaxError: expected ':'

